--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <a href="./pageWhyStudioSearch/whyStudioSearch.html" class="burger-menu_link">Why Studio Search?</a>
                     <a href="./pageReferences/references.html" class="burger-menu_link">References</a>
                     <a href="./pageContact/contactPage.html" class="burger-menu_link">Contact</a>
-                    <div class="burger-menu follow-us">
+                    <div class="burger-menu">
                         <p>Follow us</p>
                         <div class="burger-menu_social-media">
                             <a href="https://www.behance.net/studiosearch" class="burger-menu_social-media-link">
