--- a/pageContact/contactPage.html
+++ b/pageContact/contactPage.html
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contact - studio search</title>
     <link rel="stylesheet" href="style.css">
-    
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 
 <body>
@@ -58,13 +60,13 @@
                     <h1>CONTACT</h1>
                 </div>
                 <div class="phone-and-email">
-                    <div class="phone-border">
+                    <div class="phone-number">
                         <img  src="../pictures/social_media_icons/phone.png" >
                         <span>+90 532 773 66 89</span>
                     </div>
                     <div>
                         <img src="../pictures/social_media_icons/_envelope.png">
-                        <span>serpil@metexdesign.com</span>
+                        <span>serpil@studiosearch.com.tr</span>
                     </div>
                     
                 </div>
