--- a/pageFairmontHotel_2/pageFairmontHotel2.html
+++ b/pageFairmontHotel_2/pageFairmontHotel2.html
@@ -7,12 +7,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fairmont Hotel 2 - studio search</title>
     <link rel="stylesheet" href="style.css">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 <body>
     <div class="container">
         <div class="main_picture">
             <div class="logo">
-                <a href="../index.html"><img src="../pictures/logo.jpg" alt=""></a>
+                <a href="../index.html"><img src="../pictures/searchlogoKucuk3.jpg" alt=""></a>
             </div>
             <div class="burger-menu ">
                 <a href="#" class="burger-menu_button">
@@ -108,7 +111,6 @@
 
     </div>
 
-    <script src="../script.js"></script>
     <script src="./script.js"></script>
 
 </body>
