--- a/projects/projects.html
+++ b/projects/projects.html
@@ -6,8 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Projects - studio search</title>
-    <link rel="shortcut icon" href="./pictures/search logo kucuk2 icon.jpg" type="image/x-icon">
     <link rel="stylesheet" href="./project.css">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 
 <body>
@@ -72,44 +74,44 @@
             <section id="index-gallery" class="wrapper-gallery">
                 <a href="../pageBreweryHouse/breweryHousePage.html">
                     <div class="gallery-img img1"></div>
-                    <h3>Brewery House</h3>
+                    <h3>Brewery House, Uzbekistan</h3>
                 </a>
 
                 <a href="../pageDidimHotel/didimHotelPage.html">
                     <div class="gallery-img img2"></div>
-                    <h3>Didim Hotel</h3>
+                    <h3>Didim Hotel, Turkey</h3>
                 </a>
                 <a href="../pageFairmontHotel_1/pageFairmontHotel1.html">
                     <div class="gallery-img img3"></div>
-                    <h3>Fairmont Hotel 1</h3>
+                    <h3>Fairmont Hotel 1, Uzbekistan</h3>
                 </a>
                 <a href="../pageFairmontHotel_2/pageFairmontHotel2.html">
                     <div class="gallery-img img4"></div>
-                    <h3>Fairmont Hotel 2</h3>
+                    <h3>Fairmont Hotel 2, Uzbekistan</h3>
                 </a>
                 <a href="../pagePrivateResidenceMaslak/pagePrivateResidenceMaslak.html">
                     <div class="gallery-img img5"></div>
-                    <h3>Private Residence Maslak</h3>
+                    <h3>Private Residence Maslak, Turkey</h3>
                 </a>
                 <a href="../pagePrivateResidenceEtiler/pagePrivateResidenceEtiler.html">
                     <div class="gallery-img img6"></div>
-                    <h3>Private Residence Etiler</h3>
+                    <h3>Private Residence Etiler, Turkey</h3>
                 </a>
                 <a href="../pageSavistkyPlazaAvantgardeHotel/pageSavistkyPlazaAvantgardeHotel.html">
                     <div class="gallery-img img7"></div>
-                    <h3>Savistky Plaza Avantgarde Hotel</h3>
+                    <h3>Savistky Plaza Avantgarde Hotel, Uzbekistan</h3>
                 </a>
                 <a href="../pageSheratonEsenyurt/pageSheratonEsenyurt.html">
                     <div class="gallery-img img8"></div>
-                    <h3>Sheraton Esenyurt</h3>
+                    <h3>Sheraton Esenyurt, Turkey</h3>
                 </a>
                 <a href="../pageStonebridgeHotel/pageFairmontHotel1.html">
                     <div class="gallery-img img9"></div>
-                    <h3>Stonebridge Hotel</h3>
+                    <h3>Stonebridge Hotel, Macedonia</h3>
                 </a>
                 <a href="../pageMoyajRestaurant/pageMoyajRestaurant.html">
                     <div class="gallery-img img10"></div>
-                    <h3>Moyaj Restaurant</h3>
+                    <h3>Moyaj Restaurant, Turkey</h3>
                 </a>   
             </section>
             
@@ -147,7 +149,8 @@
         </div>
     </div>
 
-    <script src="./project.js"></script>
+    <script src="./script.js"></script>
+
 </body>
 
 </html>
