--- a/pageDidimHotel/didimHotelPage.html
+++ b/pageDidimHotel/didimHotelPage.html
@@ -7,7 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Didim Hotel - studio search</title>
     <link rel="stylesheet" href="style.css">
-    
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 
 <body>
@@ -115,7 +117,6 @@
         
     </div>
    
-    <script src="../script.js"></script>
     <script src="./script.js"></script>
   
 </body>
