--- a/pageFairmontHotel_1/pageFairmontHotel1.html
+++ b/pageFairmontHotel_1/pageFairmontHotel1.html
@@ -12,7 +12,7 @@
     <div class="container">
         <div class="main_picture">
             <div class="logo">
-                <a href="../index.html"><img src="../pictures/logo.jpg" alt=""></a>
+                <a href="../index.html"><img src="../pictures/searchlogoKucuk3.jpg" alt=""></a>
             </div>
             <div class="burger-menu ">
                 <a href="#" class="burger-menu_button">
@@ -107,7 +107,6 @@
 
     </div>
 
-    <script src="../script.js"></script>
     <script src="./script.js"></script>
 
 </body>
