--- a/pageSavistkyPlazaAvantgardeHotel/pageSavistkyPlazaAvantgardeHotel.html
+++ b/pageSavistkyPlazaAvantgardeHotel/pageSavistkyPlazaAvantgardeHotel.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Savistky Plaza Avantgarde Hotel - studio search</title>
     <link rel="stylesheet" href="style.css">
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 <body>
     <div class="container">
