--- a/pagePrivateResidenceEtiler/pagePrivateResidenceEtiler.html
+++ b/pagePrivateResidenceEtiler/pagePrivateResidenceEtiler.html
@@ -82,7 +82,7 @@
             <div class="footer">
                 <div class="footer-info">
                     <div class="footer-phone_number">
-                        <span>My phone number: +90 532 773 66 89</span>
+                        <span>Copyright - 2022 Studio Search</span>
                     </div>
 
                     <div>
