--- a/pageReferences/references.html
+++ b/pageReferences/references.html
@@ -15,13 +15,8 @@
 <body>
     <div class="container">
         <section class="head">
-            <div class="head-box">
-                <div class="head-text">
-                    <h1>Some of the Brands we work with</h1>
-                    <h3>Over te years, <span class="name-of-logo">Studio SEarch</span> has established solid working relationship whith independent hotel owners,
-                         as well as a number of brands:</h3>
-                </div>
-                <img class="head-picture" src="../pictures/whyStudioSearch2.jpg">
+            <div class="logo">
+                <a href="../index.html"><img src="../pictures/searchlogoKucuk3.jpg" alt=""></a>
             </div>
             <div class="burger-menu ">
                 <a href="#" class="burger-menu_button">
@@ -72,7 +67,7 @@
             </div>
            </div>
            <div class="about-me">
-            <h1>  METEX DESIGN GROUP 2005 October  – 2020 August </h1>
+            <h1>  METEX DESIGN GROUP 2005 – 2020 </h1>
              <div class="text-about">
                 <p>I worked as a main designer & project manager in projects below,</p>
                 <p>The Address Hotel Istanbul Public Areas Interior Design Project , Istanbul Turkey</p>
@@ -99,7 +94,7 @@
             <div class="footer">
                 <div class="footer-info">
                     <div class="footer-phone_number">
-                        <span>Phone number: +90 532 773 66 89</span>
+                        <span>Copyright - 2022 Studio Search</span>
                     </div>
 
                     <div>
