--- a/aboutMe/about.html
+++ b/aboutMe/about.html
@@ -97,7 +97,7 @@
             <hr size="1px" noshade>
             <div class="footer-info">
                 <div class="footer-phone_number">
-                    <span>Phone number: +90 532 773 66 89</span>
+                    <span>Copyright - 2022 Studio Search</span>
                 </div>
 
                 <div>
