--- a/pageStonebridgeHotel/pageFairmontHotel1.html
+++ b/pageStonebridgeHotel/pageFairmontHotel1.html
@@ -76,7 +76,7 @@
             <div class="footer">
                 <div class="footer-info">
                     <div class="footer-phone_number">
-                        <span>Phone number: +90 532 773 66 89</span>
+                        <span>Copyright - 2022 Studio Search</span>
                     </div>
 
                     <div>
